--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,24 @@
 sudo: false
 
-language: java
-jdk: oraclejdk8
-
-before_install:
-  - unset _JAVA_OPTIONS
-  - chmod +x gradlew
-
-jobs:
+matrix:
   include:
-# starter
-    - stage: starter
-      env: TOOL='Gradle'
-      env: TOPIC='Kotlin'
-      script: cd $TRAVIS_BUILD_DIR && ./gradlew --console plain
+    - language: java
+      jdk: oraclejdk8
+      before_install:
+        - unset _JAVA_OPTIONS
+        - chmod +x gradlew
+      jobs:
+        include:
+      # starter
+          - stage: starter
+            env: TOOL='Gradle'
+            env: TOPIC='Kotlin'
+            script: cd $TRAVIS_BUILD_DIR && ./gradlew --console plain
 
+    - language: ruby
+      rvm:
+        - 2.2
+      before_script:
+        - gem install awesome_bot
+      script:
+        - awesome_bot README.md devops/README.md
